# Cloud-Computing-Project

./: .env.docker.example  README.md  docker-compose.yml
.github/workflows/: azure-static-web-apps-lively-ocean-0f50ddf03.yml  azure-static-web-apps.yml  main_lowtechgmbh-backend.yml
api/: .env.example  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 58439fbb125b_make_orders_and_products_consistent.py  6a54a886a8bb_init_db.py  7390886b9a78_your_migration_title.py  78a7f4c4b8ee_add_tracking_status_to_order.py  83899a816232_init_db.py  b95dcdfcb348_your_migration_title.py  baa73dda301f_add_reorder_ammount_to_product.py
api/app/: .env.example  main.py
api/app/config/: env_manager.py
api/app/repositories/db/: database.py  models.py
api/app/repositories/email/: connector.py  emails_utils.py
api/app/repositories/postgres/: connector.py
api/app/routes/: __init__.py  categories.py  orders.py  products.py  stock.py  suppliers.py  tracking.py
api/app/serializers/: request.py  response.py
api/app/tasks/: inventory.py  tracking.py
api/app/utils/: emails_utils.py
api/poetry-env/: pyvenv.cfg
api/poetry-env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
api/scripts/: seed_db.py
documentation/final_report/: Makefile
final_report/: milestone_1.aux  milestone_1.fdb_latexmk  milestone_1.fls  milestone_1.tex  milestone_2.aux  milestone_2.fdb_latexmk  milestone_2.fls  milestone_2.tex
infra/: .gitignore  main.tf  variables.tf
roadmap/: draft.md
ui/: .env  .env.emailjs.example  .gitignore  package-lock.json  package.json
(+47 files in other folders)
