[tool.ruff]
lint.ignore = ["E203","E231","E261","E402","E501","E711","E712","E722","W605","E741"]
line-length = 135

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.poetry]
name = "api"
version = "0.1.0"
description = "API to drive the webshop"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
psycopg = "^3.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
